--- a/user_update.html
+++ b/user_update.html
@@ -36,7 +36,9 @@
 						{% if onchange %}onchange="{{ onchange }}" onblur="{{ onchange }}" {% endif %}>
 						<option selected="{{ field.value }}">{{ field.value }}</option>
 						{% for std_name,name in templateset.lang.country_names_us_first %}
-						<option value="{{ std_name|escapeall }}">{{ name|escapeall }}</option>
+							{% if std_name != field.value %}
+								<option value="{{ std_name|escapeall }}">{{ name|escapeall }}</option>
+							{% endif %}
 						{% endfor %}
 					</select>
 					{% case 'state' %}
@@ -59,9 +61,58 @@
 		</form>
 	</div>
 </section>
+
+<style>
+
+</style>
 <script type="text/javascript">
+
 	$(document).ready(function () {
 		actionkit.forms.installOverlayLabelHandler();
+		
+		// Hide/show state & region -  zip & postcode based on country
+		function showAndHideFields(toShow,toHide) {
+			// adapted from ln:1941 of https://act.350.org/resources/actionkit.js
+			let $show = $(toShow);
+			let $hide = $(toHide);
+
+			// don't do anything if show is already visible and hide is
+			// already invisible
+			if ($show.is(':visible') && !$hide.is(':visible')) {
+					return;
+			}
+
+			// if there's a value in the field we're hiding, copy it
+			// to the one we're showing
+			$show.removeAttr('disabled');
+			if ( $show.val() != $hide.val() && $hide.val() ) {
+					$show.val($hide.val());
+					$show.trigger('change');
+			}
+			$hide.prop('disabled', true);
+			let shownRow = $show.closest('div.ak-labels-before')
+			shownRow.show();
+			let hiddenRow = $hide.closest('div.ak-labels-before')
+			hiddenRow.hide();
+		}
+
+		function countryChanged(){
+			if ($('#id_country').val() === 'United States') {
+				showAndHideFields('#id_zip', '#id_postal');
+				showAndHideFields('#id_state', '#id_region');
+			} else {
+				showAndHideFields('#id_postal', '#id_zip');
+				showAndHideFields('#id_region', '#id_state');
+			}
+		}
+
+		$('#id_country').on('change', countryChanged);
+		countryChanged();
+
+		showAndHideFields(undefined, '#id_prefix');
+		showAndHideFields(undefined, '#id_suffix');
+		showAndHideFields(undefined, '#id_plus4');
+		
 	});
 </script>
 {% endblock content %}
