add missing css

--- a/user_form_wrapper.html
+++ b/user_form_wrapper.html
@@ -318,7 +318,7 @@
 
 	.ak-privacy.large-radios .input-radio-group input[type="radio"] + label,
 	.input-radio.ak-input-type-action.large-radios .ak-userfield-radio-set label,
-	.input-checkbox.ak-input-type-action.large-checkboxes .ak-userfield-checkbox-set label
+	.input-checkbox.ak-input-type-action.large-checkboxes .ak-userfield-checkbox-set label,
   .input-checkbox.ak-input-type-custom.large-checkboxes .ak-userfield-checkbox-set label {
 	  padding-left: 35px;
 		margin-left: 0;
@@ -387,6 +387,9 @@
 		font-weight: normal !important;
 		margin-left: 0;
   }
+	.input-checkbox.ak-input-type-action.large-checkboxes .ak-userfield-checkbox-set label {
+		font-weight: bold;
+	}
 
 	.large-checkboxes.input-checkbox {
 		padding-left: 0;
@@ -472,7 +475,8 @@
 			font-size: 14.96px;
 		}
 		.input-checkbox.survey-question.large-checkboxes .ak-survey-checkbox-set label,
-		.input-radio.survey-question.large-radios .ak-survey-radio-set label {
+		.input-radio.survey-question.large-radios .ak-survey-radio-set label,
+		.input-checkbox.ak-input-type-action.large-checkboxes .ak-userfield-checkbox-set label {
 			padding-left: 28px;
 		}
     .ak-privacy.large-radios #ak-fieldbox-privacy_notice,
