change donor merge copy

--- a/user_merge.html
+++ b/user_merge.html
@@ -5,7 +5,7 @@
 {% if actionkit_user.highest_previous_contribution %}
   <h2>Just a moment...</h2>
   <div class="section note">
-    <p>We already have another user account with the email <b>{{ target }}</b>. Maybe you already took an action with that email</p>
+    <p>We already have another user account with the email <b>{{ target }}</b>.</p>
     <p>If you'd like to consolidate your two accounts, please contact us at help@350.org so we can make sure this goes smoothly!</p>
   </div>
 {% else %}
