update styling for logout page, add a link to homepage

--- a/logout.html
+++ b/logout.html
@@ -1,7 +1,11 @@
 {% extends "./wrapper.html" %}
 
 {% block content %}
-<p>
-You are logged out!
-</p>
-{% endblock %}
+
+<section id="action-lead" class="section donate-lead action-lead title-section width-skinny padding-normal bg-white">
+	<div class="section-inner aligncenter">
+    <h2>You are logged out!</h2>
+    <a href="https://350.org/">Back to 350.org →</a>
+  </div>
+</section>
+{% endblock content %}
