add missing css (#292)

--- a/user_form_wrapper.html
+++ b/user_form_wrapper.html
@@ -389,6 +389,9 @@
 		font-weight: normal !important;
 		margin-left: 0;
   }
+	.input-checkbox.ak-input-type-action.large-checkboxes .ak-userfield-checkbox-set label {
+		font-weight: bold;
+	}
 
 	.large-checkboxes.input-checkbox {
 		padding-left: 0;
@@ -474,7 +477,8 @@
 			font-size: 14.96px;
 		}
 		.input-checkbox.survey-question.large-checkboxes .ak-survey-checkbox-set label,
-		.input-radio.survey-question.large-radios .ak-survey-radio-set label {
+		.input-radio.survey-question.large-radios .ak-survey-radio-set label,
+		.input-checkbox.ak-input-type-action.large-checkboxes .ak-userfield-checkbox-set label {
 			padding-left: 28px;
 		}
     .ak-privacy.large-radios #ak-fieldbox-privacy_notice,
