--- a/donate.html
+++ b/donate.html
@@ -2,7 +2,7 @@
 {% load actionkit_tags %}
 
 {% block css_additions %}
-<link href="https://350-ak.s3.us-west-2.amazonaws.com/donate.css" rel="stylesheet" type="text/css">
+<link href="https://dbqvwi2zcv14h.cloudfront.net/ak/donate.css" rel="stylesheet" type="text/css">
 {% endblock %}
 
 {% if templateset.custom_fields.donate_hide_paypal.strip|lower == 'y' %}
@@ -876,7 +876,7 @@
 </script>
 {% endif %}
 
-<script type="text/javascript" src="https://350-ak.s3.us-west-2.amazonaws.com/donate.js"></script>
+<script type="text/javascript" src="https://dbqvwi2zcv14h.cloudfront.net/ak/donate.js"></script>
 
 <script language="javascript">
 
